# Hypodermic

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Hypodermic/: ActivatedData.h  ActivatingData.h  AutowiredConstructor.h  BoostUuidHashFunctor.h  CMakeLists.txt  CircularDependencyDetector.cpp  CircularDependencyDetector.h  ComponentRegistration.h  ComponentRegistrationLifetimeDecorator.cpp  ComponentRegistrationLifetimeDecorator.h  ComponentRegistry.cpp  ComponentRegistry.h  Container.h  ContainerActivator.h  ContainerBuilder.cpp  ContainerBuilder.h  ContainerBuilder.hpp  CopyOnWriteRegistry.cpp  CopyOnWriteRegistry.h  CurrentLifetimeScope.h  DelegateActivator.h  DelegateActivator.hpp  DependencyResolutionException.cpp  DependencyResolutionException.h  ExternalRegistrySource.cpp  ExternalRegistrySource.h  ForwardTypeCaster.h  Helpers.h  Hypodermic.vcxproj  Hypodermic.vcxproj.filters  IActivatedData.h  IActivatingData.h  IComponentContext.h  IComponentContext.hpp  IComponentLifetime.h  IComponentRegistration.h  IComponentRegistry.h  IContainer.h  IInitializable.h  IInstanceActivator.h  (+44 more)
Hypodermic.Tests/: CMakeLists.txt
Hypodermic.Tests/GH2/: CMakeLists.txt  common.h  exe.cpp  lib.cpp
